2008-08-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made parse() const
	* src/Sqlite3MozCookieParser.cc
	* src/Sqlite3MozCookieParser.h
	
2008-08-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added firefox3 cookie support based on the patch submitted by
	tizianomueller.
	firefox3 cookie is SQLite3 database. libsqlite3 is required to enable
	this functionality.
	* configure.ac
	* m4/sqlite3.m4
	* src/CookieBoxFactory.cc
	* src/CookieBoxFactory.h
	* src/Makefile.am
	* src/Makefile.in
	* src/Sqlite3MozCookieParser.cc
	* src/Sqlite3MozCookieParser.h
	* src/main.cc
	* test/CookieBoxFactoryTest.cc
	* test/Makefile.am
	* test/Makefile.in
	* test/Sqlite3MozCookieParserTest.cc
	* test/badcookies.sqlite
	* test/cookies.sqlite
	
2008-08-15  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added Danish and Greek translations.
	Updated Spanish, Catalan, Norwegian Nynorsk translations.
	Great thanks to all translators.
	* po/LINGUAS
	* po/el.po
	* po/da.po
	* po/es.po
	* po/ca.po
	* po/nn.po

2008-08-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed man page: --follow-bittorrent should be --follow-torrent
	* doc/aria2c.1.txt
	
2008-08-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed: numCommand is less than the value specified in -C option.
	* src/RequestGroup.cc

2008-08-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed occasional assertion failure in PieceSegment.
	Calling PieceStorage::getMissingPiece(size_t) was missing after
	canceling segments in SegmentMan::getSegment(int32_t). This resulted in
	creation of duplicate segments and one of the segment was finished then
	assertion failure was caused.
	* src/SegmentMan.cc
	* test/SegmentManTest.cc

2008-08-11  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added options to load/save the server's performance/status to a	file
	and the timeout to drop their data.
	--server-stat-of=FILE specifies the file to which performance data
	is saved.