@@ -37,9 +37,9 @@
 #include "CookieBox.h"
 #include "Util.h"
 #include "RecoverableException.h"
-#include "A2STR.h"
 #include "LogFactory.h"
 #include "Logger.h"
+#include "NsCookieParser.h"
 #ifdef HAVE_SQLITE3
 # include "Sqlite3MozCookieParser.h"
 #endif // HAVE_SQLITE3
@@ -47,8 +47,6 @@
 #include <iomanip>
 
 namespace aria2 {
-
-const std::string CookieBoxFactory::C_TRUE("TRUE");
 
 CookieBoxFactory::CookieBoxFactory():_logger(LogFactory::getInstance()) {}
 
@@ -63,67 +61,31 @@ CookieBoxHandle CookieBoxFactory::createNewInstance()
 
 void CookieBoxFactory::loadDefaultCookie(const std::string& filename)
 {
-  std::ifstream s(filename.c_str());
   char header[16]; // "SQLite format 3" plus \0
-  s.get(header, sizeof(header));
-  if(s.bad()) {
-    _logger->error("Failed to read header of cookie file %s", filename.c_str());
-    return;
-  }
-  if(std::string(header) == "SQLite format 3") {
-#ifdef HAVE_SQLITE3
-    try {
-      defaultCookies = Sqlite3MozCookieParser().parse(filename);
-    } catch(RecoverableException& e) {
-      _logger->error("Failed to load cookies from %s, cause: %s",
-		     filename.c_str(), e.what());
+  {
+    std::ifstream s(filename.c_str());
+    s.get(header, sizeof(header));
+    if(s.bad()) {
+      _logger->error("Failed to read header of cookie file %s",
+		     filename.c_str());
+      return;
     }
+  }
+  try {
+    if(std::string(header) == "SQLite format 3") {
+#ifdef HAVE_SQLITE3
+      defaultCookies = Sqlite3MozCookieParser().parse(filename);
 #else // !HAVE_SQLITE3
     _logger->notice("Cannot read SQLite3 database because SQLite3 support is"
 		    " disabled by configuration.");
 #endif // !HAVE_SQLITE3
-  } else {
-    s.seekg(0);
-    std::string line;
-    while(getline(s, line)) {
-      if(Util::startsWith(line, A2STR::SHARP_C)) {
-	continue;
-      }
-      try {
-	Cookie c = parseNsCookie(line);
-	if(c.good()) {
-	  defaultCookies.push_back(c);
-	}
-      } catch(RecoverableException& e) {
-	// ignore malformed cookie entry
-	// TODO better to log it
-      }
+    } else {
+      defaultCookies = NsCookieParser().parse(filename);
     }
+  } catch(RecoverableException& e) {
+    _logger->error("Failed to load cookies from %s, cause: %s",
+		   filename.c_str(), e.what());
   }
-}
-
-Cookie CookieBoxFactory::parseNsCookie(const std::string& nsCookieStr) const
-{
-  std::deque<std::string> vs;
-  Util::slice(vs, nsCookieStr, '\t', true);
-  Cookie c;
-  if(vs.size() < 6 ) {
-    return c;
-  }
-  c.domain = vs[0];
-  c.path = vs[2];
-  c.secure = vs[3] == C_TRUE ? true : false;
-  int64_t expireDate = Util::parseLLInt(vs[4]);
-  // TODO assuming time_t is int32_t...
-  if(expireDate > INT32_MAX) {
-    expireDate = INT32_MAX;
-  }
-  c.expires = expireDate;
-  c.name = vs[5];
-  if(vs.size() >= 7) {
-    c.value = vs[6];
-  }
-  return c;
 }
 
 } // namespace aria2
